Projetoatualizado/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMI functions decls block DOT
Rule 2     functions -> functions function
Rule 3     functions -> empty
Rule 4     function -> FUNCTION ID LPAREN args_decl RPAREN COLON type SEMI decls block SEMI
Rule 5     args_decl -> ids COLON type
Rule 6     args_decl -> empty
Rule 7     args_list -> args_list COMMA expression
Rule 8     args_list -> expression
Rule 9     decls -> VAR var_list
Rule 10    decls -> empty
Rule 11    var_list -> var_list var_item
Rule 12    var_list -> var_item
Rule 13    var_item -> ids COLON type SEMI
Rule 14    ids -> ids COMMA ID
Rule 15    ids -> ID
Rule 16    type -> INTEGER
Rule 17    type -> BOOLEAN
Rule 18    type -> STRING_TYPE
Rule 19    type -> ARRAY PRA NUM DOTDOT NUM PRF OF type
Rule 20    block -> BEGIN statements END
Rule 21    statements -> statements SEMI statement
Rule 22    statements -> statement
Rule 23    statement -> ID ASSIGN expression
Rule 24    statement -> ID PRA expression PRF ASSIGN expression
Rule 25    statement -> WRITELN LPAREN args_list RPAREN
Rule 26    statement -> READLN LPAREN ID RPAREN
Rule 27    statement -> READLN LPAREN ID PRA expression PRF RPAREN
Rule 28    stmt_or_block -> statement
Rule 29    stmt_or_block -> block
Rule 30    statement -> IF expression THEN stmt_or_block ELSE stmt_or_block
Rule 31    statement -> IF expression THEN stmt_or_block
Rule 32    statement -> WHILE expression DO stmt_or_block
Rule 33    statement -> FOR ID ASSIGN expression TO expression DO stmt_or_block
Rule 34    statement -> FOR ID ASSIGN expression DOWNTO expression DO stmt_or_block
Rule 35    statement -> empty
Rule 36    expression -> expression PLUS expression
Rule 37    expression -> expression MINUS expression
Rule 38    expression -> expression TIMES expression
Rule 39    expression -> expression DIVIDE expression
Rule 40    expression -> expression DIV expression
Rule 41    expression -> expression MOD expression
Rule 42    expression -> expression EQ expression
Rule 43    expression -> expression NEQ expression
Rule 44    expression -> expression LT expression
Rule 45    expression -> expression GT expression
Rule 46    expression -> expression LE expression
Rule 47    expression -> expression GE expression
Rule 48    expression -> expression AND expression
Rule 49    expression -> expression OR expression
Rule 50    expression -> STRING
Rule 51    expression -> NOT expression
Rule 52    expression -> LPAREN expression RPAREN
Rule 53    expression -> NUM
Rule 54    expression -> ID
Rule 55    expression -> TRUE
Rule 56    expression -> FALSE
Rule 57    expression -> ID PRA expression PRF
Rule 58    expression -> ID LPAREN args_list RPAREN
Rule 59    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
ARRAY                : 19
ASSIGN               : 23 24 33 34
BEGIN                : 20
BOOLEAN              : 17
COLON                : 4 5 13
COMMA                : 7 14
DIV                  : 40
DIVIDE               : 39
DO                   : 32 33 34
DOT                  : 1
DOTDOT               : 19
DOWNTO               : 34
ELSE                 : 30
END                  : 20
EQ                   : 42
FALSE                : 56
FOR                  : 33 34
FUNCTION             : 4
GE                   : 47
GT                   : 45
ID                   : 1 4 14 15 23 24 26 27 33 34 54 57 58
IF                   : 30 31
INTEGER              : 16
LE                   : 46
LPAREN               : 4 25 26 27 52 58
LT                   : 44
MINUS                : 37
MOD                  : 41
NEQ                  : 43
NOT                  : 51
NUM                  : 19 19 53
OF                   : 19
OR                   : 49
PLUS                 : 36
PRA                  : 19 24 27 57
PRF                  : 19 24 27 57
PROGRAM              : 1
READLN               : 26 27
RPAREN               : 4 25 26 27 52 58
SEMI                 : 1 4 4 13 21
STRING               : 50
STRING_TYPE          : 18
THEN                 : 30 31
TIMES                : 38
TO                   : 33
TRUE                 : 55
VAR                  : 9
WHILE                : 32
WRITELN              : 25
error                : 

Nonterminals, with rules where they appear

args_decl            : 4
args_list            : 7 25 58
block                : 1 4 29
decls                : 1 4
empty                : 3 6 10 35
expression           : 7 8 23 24 24 27 30 31 32 33 33 34 34 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 51 52 57
function             : 2
functions            : 1 2
ids                  : 5 13 14
program              : 0
statement            : 21 22 28
statements           : 20 21
stmt_or_block        : 30 30 31 32 33 34
type                 : 4 5 13 19
var_item             : 11 12
var_list             : 9 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMI functions decls block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMI functions decls block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMI functions decls block DOT

    SEMI            shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMI . functions decls block DOT
    (2) functions -> . functions function
    (3) functions -> . empty
    (59) empty -> .

    VAR             reduce using rule 59 (empty -> .)
    FUNCTION        reduce using rule 59 (empty -> .)
    BEGIN           reduce using rule 59 (empty -> .)

    functions                      shift and go to state 5
    empty                          shift and go to state 6

state 5

    (1) program -> PROGRAM ID SEMI functions . decls block DOT
    (2) functions -> functions . function
    (9) decls -> . VAR var_list
    (10) decls -> . empty
    (4) function -> . FUNCTION ID LPAREN args_decl RPAREN COLON type SEMI decls block SEMI
    (59) empty -> .

    VAR             shift and go to state 9
    FUNCTION        shift and go to state 11
    BEGIN           reduce using rule 59 (empty -> .)

    decls                          shift and go to state 7
    function                       shift and go to state 8
    empty                          shift and go to state 10

state 6

    (3) functions -> empty .

    VAR             reduce using rule 3 (functions -> empty .)
    FUNCTION        reduce using rule 3 (functions -> empty .)
    BEGIN           reduce using rule 3 (functions -> empty .)


state 7

    (1) program -> PROGRAM ID SEMI functions decls . block DOT
    (20) block -> . BEGIN statements END

    BEGIN           shift and go to state 13

    block                          shift and go to state 12

state 8

    (2) functions -> functions function .

    VAR             reduce using rule 2 (functions -> functions function .)
    FUNCTION        reduce using rule 2 (functions -> functions function .)
    BEGIN           reduce using rule 2 (functions -> functions function .)


state 9

    (9) decls -> VAR . var_list
    (11) var_list -> . var_list var_item
    (12) var_list -> . var_item
    (13) var_item -> . ids COLON type SEMI
    (14) ids -> . ids COMMA ID
    (15) ids -> . ID

    ID              shift and go to state 17

    var_list                       shift and go to state 14
    var_item                       shift and go to state 15
    ids                            shift and go to state 16

state 10

    (10) decls -> empty .

    BEGIN           reduce using rule 10 (decls -> empty .)


state 11

    (4) function -> FUNCTION . ID LPAREN args_decl RPAREN COLON type SEMI decls block SEMI

    ID              shift and go to state 18


state 12

    (1) program -> PROGRAM ID SEMI functions decls block . DOT

    DOT             shift and go to state 19


state 13

    (20) block -> BEGIN . statements END
    (21) statements -> . statements SEMI statement
    (22) statements -> . statement
    (23) statement -> . ID ASSIGN expression
    (24) statement -> . ID PRA expression PRF ASSIGN expression
    (25) statement -> . WRITELN LPAREN args_list RPAREN
    (26) statement -> . READLN LPAREN ID RPAREN
    (27) statement -> . READLN LPAREN ID PRA expression PRF RPAREN
    (30) statement -> . IF expression THEN stmt_or_block ELSE stmt_or_block
    (31) statement -> . IF expression THEN stmt_or_block
    (32) statement -> . WHILE expression DO stmt_or_block
    (33) statement -> . FOR ID ASSIGN expression TO expression DO stmt_or_block
    (34) statement -> . FOR ID ASSIGN expression DOWNTO expression DO stmt_or_block
    (35) statement -> . empty
    (59) empty -> .

    ID              shift and go to state 22
    WRITELN         shift and go to state 23
    READLN          shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    END             reduce using rule 59 (empty -> .)
    SEMI            reduce using rule 59 (empty -> .)

    statements                     shift and go to state 20
    statement                      shift and go to state 21
    empty                          shift and go to state 28

state 14

    (9) decls -> VAR var_list .
    (11) var_list -> var_list . var_item
    (13) var_item -> . ids COLON type SEMI
    (14) ids -> . ids COMMA ID
    (15) ids -> . ID

    BEGIN           reduce using rule 9 (decls -> VAR var_list .)
    ID              shift and go to state 17

    var_item                       shift and go to state 29
    ids                            shift and go to state 16

state 15

    (12) var_list -> var_item .

    ID              reduce using rule 12 (var_list -> var_item .)
    BEGIN           reduce using rule 12 (var_list -> var_item .)


state 16

    (13) var_item -> ids . COLON type SEMI
    (14) ids -> ids . COMMA ID

    COLON           shift and go to state 30
    COMMA           shift and go to state 31


state 17

    (15) ids -> ID .

    COLON           reduce using rule 15 (ids -> ID .)
    COMMA           reduce using rule 15 (ids -> ID .)


state 18

    (4) function -> FUNCTION ID . LPAREN args_decl RPAREN COLON type SEMI decls block SEMI

    LPAREN          shift and go to state 32


state 19

    (1) program -> PROGRAM ID SEMI functions decls block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMI functions decls block DOT .)


state 20

    (20) block -> BEGIN statements . END
    (21) statements -> statements . SEMI statement

    END             shift and go to state 33
    SEMI            shift and go to state 34


state 21

    (22) statements -> statement .

    END             reduce using rule 22 (statements -> statement .)
    SEMI            reduce using rule 22 (statements -> statement .)


state 22

    (23) statement -> ID . ASSIGN expression
    (24) statement -> ID . PRA expression PRF ASSIGN expression

    ASSIGN          shift and go to state 35
    PRA             shift and go to state 36


state 23

    (25) statement -> WRITELN . LPAREN args_list RPAREN

    LPAREN          shift and go to state 37


state 24

    (26) statement -> READLN . LPAREN ID RPAREN
    (27) statement -> READLN . LPAREN ID PRA expression PRF RPAREN

    LPAREN          shift and go to state 38


state 25

    (30) statement -> IF . expression THEN stmt_or_block ELSE stmt_or_block
    (31) statement -> IF . expression THEN stmt_or_block
    (36) expression -> . expression PLUS expression
    (37) expression -> . expression MINUS expression
    (38) expression -> . expression TIMES expression
    (39) expression -> . expression DIVIDE expression
    (40) expression -> . expression DIV expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . STRING
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUM
    (54) expression -> . ID
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . ID PRA expression PRF
    (58) expression -> . ID LPAREN args_list RPAREN

    STRING          shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUM             shift and go to state 43
    ID              shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 39

state 26

    (32) statement -> WHILE . expression DO stmt_or_block
    (36) expression -> . expression PLUS expression
    (37) expression -> . expression MINUS expression
    (38) expression -> . expression TIMES expression
    (39) expression -> . expression DIVIDE expression
    (40) expression -> . expression DIV expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . STRING
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUM
    (54) expression -> . ID
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . ID PRA expression PRF
    (58) expression -> . ID LPAREN args_list RPAREN

    STRING          shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUM             shift and go to state 43
    ID              shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 47

state 27

    (33) statement -> FOR . ID ASSIGN expression TO expression DO stmt_or_block
    (34) statement -> FOR . ID ASSIGN expression DOWNTO expression DO stmt_or_block

    ID              shift and go to state 48


state 28

    (35) statement -> empty .

    END             reduce using rule 35 (statement -> empty .)
    SEMI            reduce using rule 35 (statement -> empty .)
    ELSE            reduce using rule 35 (statement -> empty .)


state 29

    (11) var_list -> var_list var_item .

    ID              reduce using rule 11 (var_list -> var_list var_item .)
    BEGIN           reduce using rule 11 (var_list -> var_list var_item .)


state 30

    (13) var_item -> ids COLON . type SEMI
    (16) type -> . INTEGER
    (17) type -> . BOOLEAN
    (18) type -> . STRING_TYPE
    (19) type -> . ARRAY PRA NUM DOTDOT NUM PRF OF type

    INTEGER         shift and go to state 50
    BOOLEAN         shift and go to state 51
    STRING_TYPE     shift and go to state 52
    ARRAY           shift and go to state 53

    type                           shift and go to state 49

state 31

    (14) ids -> ids COMMA . ID

    ID              shift and go to state 54


state 32

    (4) function -> FUNCTION ID LPAREN . args_decl RPAREN COLON type SEMI decls block SEMI
    (5) args_decl -> . ids COLON type
    (6) args_decl -> . empty
    (14) ids -> . ids COMMA ID
    (15) ids -> . ID
    (59) empty -> .

    ID              shift and go to state 17
    RPAREN          reduce using rule 59 (empty -> .)

    args_decl                      shift and go to state 55
    ids                            shift and go to state 56
    empty                          shift and go to state 57

state 33

    (20) block -> BEGIN statements END .

    DOT             reduce using rule 20 (block -> BEGIN statements END .)
    ELSE            reduce using rule 20 (block -> BEGIN statements END .)
    END             reduce using rule 20 (block -> BEGIN statements END .)
    SEMI            reduce using rule 20 (block -> BEGIN statements END .)


state 34

    (21) statements -> statements SEMI . statement
    (23) statement -> . ID ASSIGN expression
    (24) statement -> . ID PRA expression PRF ASSIGN expression
    (25) statement -> . WRITELN LPAREN args_list RPAREN
    (26) statement -> . READLN LPAREN ID RPAREN
    (27) statement -> . READLN LPAREN ID PRA expression PRF RPAREN
    (30) statement -> . IF expression THEN stmt_or_block ELSE stmt_or_block
    (31) statement -> . IF expression THEN stmt_or_block
    (32) statement -> . WHILE expression DO stmt_or_block
    (33) statement -> . FOR ID ASSIGN expression TO expression DO stmt_or_block
    (34) statement -> . FOR ID ASSIGN expression DOWNTO expression DO stmt_or_block
    (35) statement -> . empty
    (59) empty -> .

    ID              shift and go to state 22
    WRITELN         shift and go to state 23
    READLN          shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    END             reduce using rule 59 (empty -> .)
    SEMI            reduce using rule 59 (empty -> .)

    statement                      shift and go to state 58
    empty                          shift and go to state 28

state 35

    (23) statement -> ID ASSIGN . expression
    (36) expression -> . expression PLUS expression
    (37) expression -> . expression MINUS expression
    (38) expression -> . expression TIMES expression
    (39) expression -> . expression DIVIDE expression
    (40) expression -> . expression DIV expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . STRING
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUM
    (54) expression -> . ID
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . ID PRA expression PRF
    (58) expression -> . ID LPAREN args_list RPAREN

    STRING          shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUM             shift and go to state 43
    ID              shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 59

state 36

    (24) statement -> ID PRA . expression PRF ASSIGN expression
    (36) expression -> . expression PLUS expression
    (37) expression -> . expression MINUS expression
    (38) expression -> . expression TIMES expression
    (39) expression -> . expression DIVIDE expression
    (40) expression -> . expression DIV expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . STRING
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUM
    (54) expression -> . ID
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . ID PRA expression PRF
    (58) expression -> . ID LPAREN args_list RPAREN

    STRING          shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUM             shift and go to state 43
    ID              shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 60

state 37

    (25) statement -> WRITELN LPAREN . args_list RPAREN
    (7) args_list -> . args_list COMMA expression
    (8) args_list -> . expression
    (36) expression -> . expression PLUS expression
    (37) expression -> . expression MINUS expression
    (38) expression -> . expression TIMES expression
    (39) expression -> . expression DIVIDE expression
    (40) expression -> . expression DIV expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . STRING
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUM
    (54) expression -> . ID
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . ID PRA expression PRF
    (58) expression -> . ID LPAREN args_list RPAREN

    STRING          shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUM             shift and go to state 43
    ID              shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    args_list                      shift and go to state 61
    expression                     shift and go to state 62

state 38

    (26) statement -> READLN LPAREN . ID RPAREN
    (27) statement -> READLN LPAREN . ID PRA expression PRF RPAREN

    ID              shift and go to state 63


state 39

    (30) statement -> IF expression . THEN stmt_or_block ELSE stmt_or_block
    (31) statement -> IF expression . THEN stmt_or_block
    (36) expression -> expression . PLUS expression
    (37) expression -> expression . MINUS expression
    (38) expression -> expression . TIMES expression
    (39) expression -> expression . DIVIDE expression
    (40) expression -> expression . DIV expression
    (41) expression -> expression . MOD expression
    (42) expression -> expression . EQ expression
    (43) expression -> expression . NEQ expression
    (44) expression -> expression . LT expression
    (45) expression -> expression . GT expression
    (46) expression -> expression . LE expression
    (47) expression -> expression . GE expression
    (48) expression -> expression . AND expression
    (49) expression -> expression . OR expression

    THEN            shift and go to state 64
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66
    TIMES           shift and go to state 67
    DIVIDE          shift and go to state 68
    DIV             shift and go to state 69
    MOD             shift and go to state 70
    EQ              shift and go to state 71
    NEQ             shift and go to state 72
    LT              shift and go to state 73
    GT              shift and go to state 74
    LE              shift and go to state 75
    GE              shift and go to state 76
    AND             shift and go to state 77
    OR              shift and go to state 78


state 40

    (50) expression -> STRING .

    THEN            reduce using rule 50 (expression -> STRING .)
    PLUS            reduce using rule 50 (expression -> STRING .)
    MINUS           reduce using rule 50 (expression -> STRING .)
    TIMES           reduce using rule 50 (expression -> STRING .)
    DIVIDE          reduce using rule 50 (expression -> STRING .)
    DIV             reduce using rule 50 (expression -> STRING .)
    MOD             reduce using rule 50 (expression -> STRING .)
    EQ              reduce using rule 50 (expression -> STRING .)
    NEQ             reduce using rule 50 (expression -> STRING .)
    LT              reduce using rule 50 (expression -> STRING .)
    GT              reduce using rule 50 (expression -> STRING .)
    LE              reduce using rule 50 (expression -> STRING .)
    GE              reduce using rule 50 (expression -> STRING .)
    AND             reduce using rule 50 (expression -> STRING .)
    OR              reduce using rule 50 (expression -> STRING .)
    DO              reduce using rule 50 (expression -> STRING .)
    END             reduce using rule 50 (expression -> STRING .)
    SEMI            reduce using rule 50 (expression -> STRING .)
    ELSE            reduce using rule 50 (expression -> STRING .)
    PRF             reduce using rule 50 (expression -> STRING .)
    RPAREN          reduce using rule 50 (expression -> STRING .)
    COMMA           reduce using rule 50 (expression -> STRING .)
    TO              reduce using rule 50 (expression -> STRING .)
    DOWNTO          reduce using rule 50 (expression -> STRING .)


state 41

    (51) expression -> NOT . expression
    (36) expression -> . expression PLUS expression
    (37) expression -> . expression MINUS expression
    (38) expression -> . expression TIMES expression
    (39) expression -> . expression DIVIDE expression
    (40) expression -> . expression DIV expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . STRING
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUM
    (54) expression -> . ID
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . ID PRA expression PRF
    (58) expression -> . ID LPAREN args_list RPAREN

    STRING          shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUM             shift and go to state 43
    ID              shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 79

state 42

    (52) expression -> LPAREN . expression RPAREN
    (36) expression -> . expression PLUS expression
    (37) expression -> . expression MINUS expression
    (38) expression -> . expression TIMES expression
    (39) expression -> . expression DIVIDE expression
    (40) expression -> . expression DIV expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GT expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . STRING
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUM
    (54) expression -> . ID
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . ID PRA expression PRF
    (58) expression -> . ID LPAREN args_list RPAREN

    STRING          shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUM             shift and go to state 43
    ID              shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 80

state 43

    (53) expression -> NUM .

    THEN            reduce using rule 53 (expression -> NUM .)
    PLUS            reduce using rule 53 (expression -> NUM .)
    MINUS           reduce using rule 53 (expression -> NUM .)
    TIMES           reduce using rule 53 (expression -> NUM .)
    DIVIDE          reduce using rule 53 (expression -> NUM .)
    DIV             reduce using rule 53 (expression -> NUM .)
    MOD             reduce using rule 53 (expression -> NUM .)
    EQ              reduce using rule 53 (expression -> NUM .)
    NEQ             reduce using rule 53 (expression -> NUM .)
    LT              reduce using rule 53 (expression -> NUM .)
    GT              reduce using rule 53 (expression -> NUM .)
    LE              reduce using rule 53 (expression -> NUM .)
    GE              reduce using rule 53 (expression -> NUM .)
    AND             reduce using rule 53 (expression -> NUM .)
    OR              reduce using rule 53 (expression -> NUM .)
    DO              reduce using rule 53 (expression -> NUM .)
    END             reduce using rule 53 (expression -> NUM .)
    SEMI            reduce using rule 53 (expression -> NUM .)
    ELSE            reduce using rule 53 (expression -> NUM .)
    PRF             reduce using rule 53 (expression -> NUM .)
    RPAREN          reduce using rule 53 (expression -> NUM .)
    COMMA           reduce using rule 53 (expression -> NUM .)
    TO              reduce using rule 53 (expression -> NUM .)
    DOWNTO          reduce using rule 53 (expression -> NUM .)


state 44

    (54) expression -> ID .
    (57) expression -> ID . PRA expression PRF
    (58) expression -> ID . LPAREN args_list RPAREN

    THEN            reduce using rule 54 (expression -> ID .)
    PLUS            reduce using rule 54 (expression -> ID .)
    MINUS           reduce using rule 54 (expression -> ID .)
    TIMES           reduce using rule 54 (expression -> ID .)
    DIVIDE          reduce using rule 54 (expression -> ID .)
    DIV             reduce using rule 54 (expression -> ID .)
    MOD             reduce using rule 54 (expression -> ID .)
    EQ              reduce using rule 54 (expression -> ID .)
    NEQ             reduce using rule 54 (expression -> ID .)
    LT              reduce using rule 54 (expression -> ID .)
    GT              reduce using rule 54 (expression -> ID .)
    LE              reduce using rule 54 (expression -> ID .)
    GE              reduce using rule 54 (expression -> ID .)
    AND             reduce using rule 54 (expression -> ID .)
    OR              reduce using rule 54 (expression -> ID .)
    DO              reduce using rule 54 (expression -> ID .)
    END             reduce using rule 54 (expression -> ID .)
    SEMI            reduce using rule 54 (expression -> ID .)
    ELSE            reduce using rule 54 (expression -> ID .)
    PRF             reduce using rule 54 (expression -> ID .)
    RPAREN          reduce using rule 54 (expression -> ID .)
    COMMA           reduce using rule 54 (expression -> ID .)
    TO              reduce using rule 54 (expression -> ID .)
    DOWNTO          reduce using rule 54 (expression -> ID .)
    PRA             shift and go to state 81
    LPAREN          shift and go to state 82


state 45

    (55) expression -> TRUE .

    THEN            reduce using rule 55 (expression -> TRUE .)
    PLUS            reduce using rule 55 (expression -> TRUE .)
    MINUS           reduce using rule 55 (expression -> TRUE .)
    TIMES           reduce using rule 55 (expression -> TRUE .)
    DIVIDE          reduce using rule 55 (expression -> TRUE .)
    DIV             reduce using rule 55 (expression -> TRUE .)
    MOD             reduce using rule 55 (expression -> TRUE .)
    EQ              reduce using rule 55 (expression -> TRUE .)
    NEQ             reduce using rule 55 (expression -> TRUE .)
    LT              reduce using rule 55 (expression -> TRUE .)
    GT              reduce using rule 55 (expression -> TRUE .)
    LE              reduce using rule 55 (expression -> TRUE .)
    GE              reduce using rule 55 (expression -> TRUE .)
    AND             reduce using rule 55 (expression -> TRUE .)
    OR              reduce using rule 55 (expression -> TRUE .)
    DO              reduce using rule 55 (expression -> TRUE .)
    END             reduce using rule 55 (expression -> TRUE .)
    SEMI            reduce using rule 55 (expression -> TRUE .)
    ELSE            reduce using rule 55 (expression -> TRUE .)
    PRF             reduce using rule 55 (expression -> TRUE .)
    RPAREN          reduce using rule 55 (expression -> TRUE .)
    COMMA           reduce using rule 55 (expression -> TRUE .)
    TO              reduce using rule 55 (expression -> TRUE .)
    DOWNTO          reduce using rule 55 (expression -> TRUE .)


state 46

    (56) expression -> FALSE .

    THEN            reduce using rule 56 (expression -> FALSE .)
    PLUS            reduce using rule 56 (expression -> FALSE .)
    MINUS           reduce using rule 56 (expression -> FALSE .)
    TIMES           reduce using rule 56 (expression -> FALSE .)
    DIVIDE          reduce using rule 56 (expression -> FALSE .)
    DIV             reduce using rule 56 (expression -> FALSE .)
    MOD             reduce using rule 56 (expression -> FALSE .)
    EQ              reduce using rule 56 (expression -> FALSE .)
    NEQ             reduce using rule 56 (expression -> FALSE .)
    LT              reduce using rule 56 (expression -> FALSE .)
    GT              reduce using rule 56 (expression -> FALSE .)
    LE              reduce using rule 56 (expression -> FALSE .)
    GE              reduce using rule 56 (expression -> FALSE .)
    AND             reduce using rule 56 (expression -> FALSE .)
    OR              reduce using rule 56 (expression -> FALSE .)
    DO              reduce using rule 56 (expression -> FALSE .)
    END             reduce using rule 56 (expression -> FALSE .)
    SEMI            reduce using rule 56 (expression -> FALSE .)
    ELSE            reduce using rule 56 (expression -> FALSE .)
    PRF             reduce using rule 56 (expression -> FALSE .)
    RPAREN          reduce using rule 56 (expression -> FALSE .)
    COMMA           reduce using rule 56 (expression -> FALSE .)
    TO              reduce using rule 56 (expression -> FALSE .)
    DOWNTO          reduce using rule 56 (expression -> FALSE .)


state 47

    (32) statement -> WHILE expression . DO stmt_or_block
    (36) expression -> expression . PLUS expression
    (37) expression -> expression . MINUS expression
    (38) expression -> expression . TIMES expression
    (39) expression -> expression . DIVIDE expression
    (40) expression -> expression . DIV expression
    (41) expression -> expression . MOD expression
    (42) expression -> expression . EQ expression
    (43) expression -> expression . NEQ expression
    (44) expression -> expression . LT expression
    (45) expression -> expression . GT expression
    (46) expression -> expression . LE expression
    (47) expression -> expression . GE expression
    (48) expression -> expression . AND expression
    (49) expression -> expression . OR expression

    DO              shift and go to state 83
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66
    TIMES           shift and go to state 67
    DIVIDE          shift and go to state 68
    DIV             shift and go to state 69
    MOD             shift and go to state 70
    EQ              shift and go to state 71
    NEQ             shift and go to state 72
    LT              shift and go to state 73
    GT              shift and go to state 74
    LE              shift and go to state 75
    GE              shift and go to state 76
    AND             shift and go to state 77
    OR              shift and go to state 78


state 48

    (33) statement -> FOR ID . ASSIGN expression TO expression DO stmt_or_block
    (34) statement -> FOR ID . ASSIGN expression DOWNTO expression DO stmt_or_block

    ASSIGN          shift and go to state 84


state 49

    (13) var_item -> ids COLON type . SEMI

    SEMI            shift and go to state 85


state 50

    (16) type -> INTEGER .

    SEMI            reduce using rule 16 (type -> INTEGER .)
    RPAREN          reduce using rule 16 (type -> INTEGER .)


state 51

    (17) type -> BOOLEAN .

    SEMI            reduce using rule 17 (type -> BOOLEAN .)
    RPAREN          reduce using rule 17 (type -> BOOLEAN .)


state 52

    (18) type -> STRING_TYPE .

    SEMI            reduce using rule 18 (type -> STRING_TYPE .)
    RPAREN          reduce using rule 18 (type -> STRING_TYPE .)


state 53

    (19) type -> ARRAY . PRA NUM DOTDOT NUM PRF OF type

    PRA             shift and go to state 86


state 54

    (14) ids -> ids COMMA ID .

    COLON           reduce using rule 14 (ids -> ids COMMA ID .)
    COMMA           reduce using rule 14 (ids -> ids COMMA ID .)


state 55

    (4) function -> FUNCTION ID LPAREN args_decl . RPAREN COLON type SEMI decls block SEMI

    RPAREN          shift and go to state 87


state 56

    (5) args_decl -> ids . COLON type
    (14) ids -> ids . COMMA ID

    COLON           shift and go to state 88
    COMMA           shift and go to state 31


state 57

    (6) args_decl -> empty .

    RPAREN          reduce using rule 6 (args_decl -> empty .)


state 58

    (21) statements -> statements SEMI statement .

    END             reduce using rule 21 (statements -> statements SEMI statement .)
    SEMI            reduce using rule 21 (statements -> statements SEMI statement .)


state 59
